[workspace]
members = [
    "closure",
    "concur-async",
    "concur-spawn",
    "concur-threadpool",
    "fnptr",
    "generic",
    "generic-enum",
    "iterator",
    "iterator-ref",
    "lifetime",
    "ref-borrow",
    "slice",
    "shadow-deep-copy",
    "smartptr-box",
    "smartptr-rc",
    "trait-impl",
    "trait-partialeq",
    "trait-partialord"
, "concur-async2", "concur-async-std"]
resolver = "2"
